<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addedittransaction.AddEditTransactionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title="add_edit_transaction"
            app:popupTheme="@style/Widget.App.PopupMenu"
            app:menu="@menu/add_edit_transaction_menu"
            app:titleTextAppearance="@style/TitleTextAppearance"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/content_description"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="24dp">

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:id="@+id/containerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textAppearance="@style/TextView.CustomFontRegular"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:id="@+id/containerDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/desc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textAppearance="@style/TextView.CustomFontRegular"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputFilledStyle"
                android:id="@+id/containerAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textAppearance="@style/TextView.CustomFontRegular"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/type"
                android:textAppearance="@style/TextView.CustomFontRegular"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/rgType"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textAppearance="@style/TextView.CustomFontRegular"
                    android:textSize="14sp"
                    tools:ignore="VisualLintButtonSize" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbExpense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    android:textAppearance="@style/TextView.CustomFontRegular"
                    android:textSize="14sp"
                    tools:ignore="VisualLintButtonSize" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/photo"
                android:textAppearance="@style/TextView.CustomFontRegular"
                android:textSize="14sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:background="@drawable/bg_frame"
                    android:contentDescription="@string/content_description"
                    android:maxWidth="0dp"
                    android:maxHeight="180dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/labelTakePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_a_photo"
                    android:textAppearance="@style/TextView.CustomFontRegular"
                    android:textSize="14sp"
                    android:textColor="@color/md_theme_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="14sp"
                android:text="@string/save"
                android:textAppearance="@style/TextView.CustomFontMedium"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>