<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="24dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextView.CustomFontBold"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textAppearance="@style/TextView.CustomFontRegular"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:id="@+id/containerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextView.CustomFontRegular"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:id="@+id/containerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAppearance="@style/TextView.CustomFontRegular"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextView.CustomFontMedium"
            android:textSize="14sp"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

        <TextView
            android:id="@+id/labelSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textAppearance="@style/TextView.CustomFontRegular"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>