<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/Widget.App.PopupMenu"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/ic_logo"
            app:navigationIconTint="@color/md_theme_primary"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/TextView.CustomFontRegular"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Hi, John Doe!" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardView"
                    style="?attr/materialCardViewFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textName">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/your_balance"
                            android:textAppearance="@style/TextView.CustomFontRegular"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/rp0_00"
                            android:textAppearance="@style/TextView.CustomFontMedium"
                            android:textSize="22sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="16dp">

                            <TextView
                                android:id="@+id/labelIncome"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="16dp"
                                android:drawablePadding="8dp"
                                android:text="@string/income"
                                android:textAppearance="@style/TextView.CustomFontRegular"
                                android:textSize="14sp"
                                app:drawableStartCompat="@drawable/ic_income"
                                app:layout_constraintEnd_toStartOf="@+id/labelExpense"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/labelExpense"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="16dp"
                                android:drawablePadding="8dp"
                                android:text="@string/expense"
                                android:textAppearance="@style/TextView.CustomFontRegular"
                                android:textSize="14sp"
                                app:drawableStartCompat="@drawable/ic_expanse"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toEndOf="@+id/labelIncome"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textIncome"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/rp0_00"
                                android:textAppearance="@style/TextView.CustomFontMedium"
                                android:textColor="#65B741"
                                android:textSize="14sp"
                                app:layout_constraintEnd_toEndOf="@+id/labelIncome"
                                app:layout_constraintStart_toStartOf="@+id/labelIncome"
                                app:layout_constraintTop_toBottomOf="@+id/labelIncome"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:id="@+id/textExpense"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/rp0_00"
                                android:textAppearance="@style/TextView.CustomFontMedium"
                                android:textColor="#E53935"
                                android:textSize="14sp"
                                app:layout_constraintEnd_toEndOf="@+id/labelExpense"
                                app:layout_constraintStart_toStartOf="@+id/labelExpense"
                                app:layout_constraintTop_toBottomOf="@+id/labelIncome"
                                tools:ignore="TextContrastCheck" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/labelMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/menu"
                    android:textAppearance="@style/TextView.CustomFontBold"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/materialCardView"
                    app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardViewTransactions"
                    style="?attr/materialCardViewOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelMenu">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/ivTransactions"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/content_description"
                            android:src="@drawable/ic_transactions"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/labelTransactions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/transactions"
                            android:textAppearance="@style/TextView.CustomFontMedium"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="@+id/ivTransactions"
                            app:layout_constraintStart_toEndOf="@+id/ivTransactions"
                            app:layout_constraintTop_toTopOf="@+id/ivTransactions" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>